#18 Document usage and release readiness
Document usage and release readiness